# skillforge

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  vercel-build.sh  vercel.json
skills/: README.md
skills/github-code-review/: SKILL.md  server.py
skills/linear-issue-manager/: SKILL.md  server.py
skills/postgres-schema-explorer/: SKILL.md  server.py
web/: package-lock.json  package.json  vercel.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/browse/: BrowseClient.tsx  page.tsx
web/src/app/skills/[name]/: SkillDetailClient.tsx  page.tsx
web/src/components/: CopyButton.tsx  Navbar.tsx  SearchBar.tsx  SecurityBadge.tsx  SkillCard.tsx  TagBadge.tsx
web/src/lib/: api.ts
